[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keibayosoku"
version = "0.1.0"
description = "netkeiba.comから競馬の過去レース結果をスクレイピングし、ルールベースで着順を予測する"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "python-dateutil>=2.8",
    "scikit-learn>=1.4",
]

[project.scripts]
keibayosoku = "keibayosoku.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
